fix overflow issue, try fix text color issue, navbar ui, profile img issue

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,4 +5,5 @@
 body {
     @apply bg-gradient-to-r from-[#16222A] to-[#3A6073];
     overscroll-behavior: none;
+    color: #a6adbb
 }
